Updated Resume section and added pdf download

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h1 class="section-heading">Z:>_ About Me:</h1>
-                    <hr class="light">
+                    <hr class="primary">
                     <img src="img/blog/archer.jpg" class="img-responsive" id="portrait_img" alt="Self Portrait">
-                    <hr class="light">
+                    <hr class="primary">
                     <p class="text-faded text-left about_me_25">My name is <b>Jon Prell</b> and I am a full-stack web developer. From Concept to Deployment, I have all of the skills needed to bring your project to life.</p>
 
                     <div class="row">
@@ -163,6 +163,7 @@
                         <li>j.Query</li>
                         <li>Bootstrap</li>
                         <li>React</li>
+                        <li>Photoshop</li>
                         </ul>
                     </div>
                 </div>
@@ -356,96 +357,129 @@
 <!-- Resume modal -->
 <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" id="resume">
     <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content bg-dark">
+        <div class="modal-content resume_info">
             <div class="modal-header">
                 <h3 class="modal-title">Resume</h3>
             </div>
-            <div class="modal-body text-dark">
+            <div class="modal-body">
                 <div class="row">
                     <div class="col-lg-12 text-left">
                         <h1>Work History</h1>
-                        <hr class="primary">
+                        <hr class="dark">
                     </div>
-                    <div class="col-sm-4 text-left cv-pad">
-                        <h3>amazon.com</h3>
+                <!-- amazon -->
+                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                        <h3 class="resume_font">amazon.com</h3>
                     </div>
-                    <div class="col-sm-4 text-center cv-pad">
-                        <h3>Sept. '15 - Present</h3>
+                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                        <h3 class="resume_font">Sept. '15 - Present</h3>
                     </div>
-                    <div class="col-sm-4 text-right cv-pad">
-                        <h3>Hebron, KY</h3>
+                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                        <h3 class="resume_font">Hebron, KY</h3>
                     </div>
-                    <div class="col-lg-12">
-                        <p>Occupaional Health and Safety Specialist</p>
-                        <p>- Provided support for Operations to acheive their safety benchmarks</p>
-                        <p>- Coordinated with external contractors and vendors to acheive and maintain regulatory compliance.</p>
-                        <p>- Participated in incident investigations to ensure the hazard was identified and measures were taken to prevent reoccurance.</p>
-                        <hr class="primary">
+                    <div class="col-lg-12 col-sm-12 resume_info">
+                        <p><b>Occupaional Health and Safety Specialist</b></p>
+                        <ul>
+                            <li>Collaborate with area and operations management on night shift to continuously improve safety performance.</li>
+                            <li>Produce trend and data reports for FC senior leadership, as well as Regional and Corporate leadership.</li>
+                            <li>Re-launched the Associate Safety Committee for night shift that continues to drive departmental safety culture.<?
+                            <li>Verified and developed critical safety programs to ensure policy compliance in advance of a peer audit.</li>
+                            <li>Traveled to other Amazon.com Fulfillment Centers s across the NAFC network in support of their safety teams.</li>
+                        </ul>
+                        <hr class="dark">
                     </div>
-                    <div class="col-sm-4 text-left cv-pad">
-                        <h3>Barnes Aerospace</h3>
+                <!-- Barnes -->
+                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                        <h3 class="resume_font">Marathon Petroleum</h3>
                     </div>
-                    <div class="col-sm-4 text-center cv-pad">
-                        <h3>Sept. '13 - May. '14</h3>
+                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                        <h3 class="resume_font">Aug. '14 - Aug. '15</h3>
                     </div>
-                    <div class="col-sm-4 text-right cv-pad">
-                        <h3>West Chester, OH</h3>
+                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                        <h3 class="resume_font">Cincinnati, OH</h3>
                     </div>
-                    <div class="col-lg-12">
-                        <p>Occupaional Health and Safety Co-Op</p>
-                        <p>- Provided support for Operations to acheive their safety benchmarks</p>
-                        <p>- Coordinated with external contractors and vendors to acheive and maintain regulatory compliance.</p>
-                        <p>- Participated in incident investigations to ensure the hazard was identified and measures were taken to prevent reoccurance.</p>
-                        <hr class="primary">
+                    <div class="col-lg-12 col-sm-12 resume_info">
+                        <p><b>Occupaional Health and Safety Specialist</b></p>
+                        <ul>
+                            <li>Authored emergency response plans and procedures, facilitated emergency management training, and coordinated with external emergency response agencies including the Cincinnati Fire and Police Departments.</li>
+                            <li>Collected sampling data and produced a comprehensive Noise Isopleth Map for the Marathon Detroit Refinery.</li>
+                            <li>Conducted contractor field safety audits and produced monthly trend reports for operations and contractor management.</li>
+                        </ul>
+                        <hr class="dark">
                     </div>
-                        <div class="col-sm-4 text-left cv-pad">
-                            <h3>Marathon Petroleum Co.</h3>
-                        </div>
-                        <div class="col-sm-4 text-center cv-pad">
-                            <h3>Sept. '14 - Aug. '15</h3>
-                        </div>
-                        <div class="col-sm-4 text-right cv-pad">
-                            <h3>Cincinnati, OH</h3>
-                        </div>
-                    <div class="col-lg-12">
-                        <p>Occupaional Health and Safety Co-Op</p>
-                        <p>- Provided support for Operations to acheive their safety benchmarks</p>
-                        <p>- Coordinated with external contractors and vendors to acheive and maintain regulatory compliance.</p>
-                        <p>- Participated in incident investigations to ensure the hazard was identified and measures were taken to prevent reoccurance.</p>
-                     <hr class="primary">
+                <!-- Marathon -->
+                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                        <h3 class="resume_font">Barnes Aerospace</h3>
                     </div>
-                    <div class="col-lg-12">
+                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                        <h3 class="resume_font">Sept. '13 - May. '14</h3>
+                    </div>
+                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                        <h3 class="resume_font">West Chester, OH</h3>
+                    </div>
+                    <div class="col-lg-12 col-sm-12 resume_info">
+                        <p><b>Occupaional Health and Safety Specialist</b></p>
+                        <ul>
+                            <li>Conducted critical risk mitigation projects including: job safety analysis, safety procedure guides, risk assessment, and lock out/tag out procedures.</li>
+                            <li>Partnered with the Facilities Department to inspect and maintain the hazardous waste inventory.</li>
+                            <li>Ensured policy compliance with local, state, and federal regulations.</li>
+                        </ul>
+                        <hr class="dark">
+                    </div>
+                <!-- KYANG -->
+                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                        <h3 class="resume_font">Army National Guard</h3>
+                    </div>
+                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                        <h3 class="resume_font">Feb. '06 - Feb. '08</h3>
+                    </div>
+                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                        <h3 class="resume_font">Louisville, KY</h3>
+                    </div>
+                    <div class="col-lg-12 col-sm-12 resume_info">
+                        <p><b>Occupaional Health and Safety Specialist</b></p>
+                        <ul>
+                            <li>Conducted intelligence support operations for the 20th Special Forces Group (Airborne).</li>
+                            <li>Assisted NCO and Senior NCO leadership in field support tasks during high-risk airborne operations.</li>
+                            <li>Enlisted into service at the accelerated rank of E-3 Private First Class.</li>
+                        </ul>
+                    </div>
+                <!-- Education -->
+                    <div class="col-lg-12 col-sm-12">
                         <h1>Education</h1>
-                        <hr class="primary">
+                        <hr class="dark">
+                    </div>
+                    <div class="col-lg-12 text-left cv-pad">
+                        <h3 class="resume_font">Eastern Kentucky University</h3>
                     </div>
                     <div class="col-lg-12 col-md-6 text-left cv-pad">
-                        <h3>Master's in Safety, Security, Emergency Management</h3>
-                    </div>
-                    <div class="col-lg-6 col-md-3 text-left cv-pad">
-                        <h3>May '13 - Aug. '15</h3>
-                    </div>
-                    <div class="col-lg-6 col-md-3 text-right cv-pad">
-                        <h3>Eastern Kentucky University</h3>
-                    </div>
-                    <div class="col-lg-12">
-                        <p>Certificate in Occupational Safety</p>
-                        <hr class="primary">
+                        <h3 class="resume_font"><b>Master's in Safety, Security, Emergency Management</b></h3>
                     </div>
                     <div class="col-lg-12 col-md-6 text-left cv-pad">
-                        <h3>Bachelor's in Homeland Security</h3>
-                    </div>
-                    <div class="col-lg-6 col-md-3 text-left cv-pad">
-                        <h3>Jan. '08 - May. '12</h3>
-                    </div>
-                    <div class="col-lg-6 col-md-3 text-right cv-pad">
-                        <h3>Eastern Kentucky University</h3>
+                        <h4 class="resume_font">May '13 - Aug. '15</h4>
                     </div>
                     <div class="col-lg-12">
-                        <p>Minor in Criminal Justice</p>
+                        <h4 class="resume_font">Certificate in Occupational Safety</h4>
+                    </div>
+                    <hr class="dark">
+                    <div class="col-lg-12 col-md-6 text-left cv-pad">
+                        <h3 class="resume_font"><b>Bachelor's in Homeland Security</b></h3>
+                    </div>
+                    <div class="col-lg-12 col-md-6 text-left cv-pad">
+                        <h4 class="resume_font">Jan. '08 - May. '12</h4>
+                    </div>
+                    <div class="col-lg-12">
+                        <h4 class="resume_font">Minor in Criminal Justice</h4>
                     </div>
                 </div>
+                <br>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-modal" data-dismiss="modal">Close</button>
+                    <div class="col-lg-6 text-left">
+                        <a href="docs/resume2017.pdf" target= "_blank" class="btn btn-modal">PDF</a>
+                    </div>
+                    <div class="col-lg-6 text-right">
+                        <button type="button" class="btn btn-modal" data-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
