--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
             <div class = "col-lg-12 text-center px20-padding">
                 <div class="px20-padding col-md-6 text-center">
-                    <a href="construction.html" class="page-scroll btn btn-default btn-xl sr-button">Z:>_ BLOG</a>
+                    <a href="construction.html" class="page-scroll btn btn-default btn-xl sr-button" target="_blank">Z:>_ BLOG</a>
                 </div>
                 <div class = "px20-padding col-md-6 text-center">
                     <button class="page-scroll btn btn-default btn-xl sr-button" data-toggle="modal" data-target="#resume">Z:>_ RESUME</button>
