fixed broken li tag

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                         <ul>
                             <li>Collaborate with area and operations management on night shift to continuously improve safety performance.</li>
                             <li>Produce trend and data reports for FC senior leadership, as well as Regional and Corporate leadership.</li>
-                            <li>Re-launched the Associate Safety Committee for night shift that continues to drive departmental safety culture.<?
+                            <li>Re-launched the Associate Safety Committee for night shift that continues to drive departmental safety culture.</li>
                             <li>Verified and developed critical safety programs to ensure policy compliance in advance of a peer audit.</li>
                             <li>Traveled to other Amazon.com Fulfillment Centers s across the NAFC network in support of their safety teams.</li>
                         </ul>
