fixed resume code and responsiveness

--- a/index.html
+++ b/index.html
@@ -362,122 +362,122 @@
                 <h3 class="modal-title">Resume</h3>
             </div>
             <div class="modal-body">
-                <div class="row">
-                    <div class="col-lg-12 text-left">
-                        <h1>Work History</h1>
-                        <hr class="dark">
-                    </div>
-                <!-- amazon -->
-                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
-                        <h3 class="resume_font">amazon.com</h3>
-                    </div>
-                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
-                        <h3 class="resume_font">Sept. '15 - Present</h3>
-                    </div>
-                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
-                        <h3 class="resume_font">Hebron, KY</h3>
-                    </div>
-                    <div class="col-lg-12 col-sm-12 resume_info">
-                        <p><b>Occupaional Health and Safety Specialist</b></p>
-                        <ul>
-                            <li>Collaborate with area and operations management on night shift to continuously improve safety performance.</li>
-                            <li>Produce trend and data reports for FC senior leadership, as well as Regional and Corporate leadership.</li>
-                            <li>Re-launched the Associate Safety Committee for night shift that continues to drive departmental safety culture.</li>
-                            <li>Verified and developed critical safety programs to ensure policy compliance in advance of a peer audit.</li>
-                            <li>Traveled to other Amazon.com Fulfillment Centers s across the NAFC network in support of their safety teams.</li>
-                        </ul>
-                        <hr class="dark">
-                    </div>
-                <!-- Barnes -->
-                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
-                        <h3 class="resume_font">Marathon Petroleum</h3>
-                    </div>
-                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
-                        <h3 class="resume_font">Aug. '14 - Aug. '15</h3>
-                    </div>
-                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
-                        <h3 class="resume_font">Cincinnati, OH</h3>
-                    </div>
-                    <div class="col-lg-12 col-sm-12 resume_info">
-                        <p><b>Occupaional Health and Safety Specialist</b></p>
-                        <ul>
-                            <li>Authored emergency response plans and procedures, facilitated emergency management training, and coordinated with external emergency response agencies including the Cincinnati Fire and Police Departments.</li>
-                            <li>Collected sampling data and produced a comprehensive Noise Isopleth Map for the Marathon Detroit Refinery.</li>
-                            <li>Conducted contractor field safety audits and produced monthly trend reports for operations and contractor management.</li>
-                        </ul>
-                        <hr class="dark">
-                    </div>
-                <!-- Marathon -->
-                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
-                        <h3 class="resume_font">Barnes Aerospace</h3>
-                    </div>
-                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
-                        <h3 class="resume_font">Sept. '13 - May. '14</h3>
-                    </div>
-                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
-                        <h3 class="resume_font">West Chester, OH</h3>
-                    </div>
-                    <div class="col-lg-12 col-sm-12 resume_info">
-                        <p><b>Occupaional Health and Safety Specialist</b></p>
-                        <ul>
-                            <li>Conducted critical risk mitigation projects including: job safety analysis, safety procedure guides, risk assessment, and lock out/tag out procedures.</li>
-                            <li>Partnered with the Facilities Department to inspect and maintain the hazardous waste inventory.</li>
-                            <li>Ensured policy compliance with local, state, and federal regulations.</li>
-                        </ul>
-                        <hr class="dark">
-                    </div>
-                <!-- KYANG -->
-                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
-                        <h3 class="resume_font">Army National Guard</h3>
-                    </div>
-                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
-                        <h3 class="resume_font">Feb. '06 - Feb. '08</h3>
-                    </div>
-                    <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
-                        <h3 class="resume_font">Louisville, KY</h3>
-                    </div>
-                    <div class="col-lg-12 col-sm-12 resume_info">
-                        <p><b>Occupaional Health and Safety Specialist</b></p>
-                        <ul>
-                            <li>Conducted intelligence support operations for the 20th Special Forces Group (Airborne).</li>
-                            <li>Assisted NCO and Senior NCO leadership in field support tasks during high-risk airborne operations.</li>
-                            <li>Enlisted into service at the accelerated rank of E-3 Private First Class.</li>
-                        </ul>
-                    </div>
-                <!-- Education -->
-                    <div class="col-lg-12 col-sm-12">
-                        <h1>Education</h1>
-                        <hr class="dark">
-                    </div>
-                    <div class="col-lg-12 text-left cv-pad">
-                        <h3 class="resume_font">Eastern Kentucky University</h3>
-                    </div>
-                    <div class="col-lg-12 col-md-6 text-left cv-pad">
-                        <h3 class="resume_font"><b>Master's in Safety, Security, Emergency Management</b></h3>
-                    </div>
-                    <div class="col-lg-12 col-md-6 text-left cv-pad">
-                        <h4 class="resume_font">May '13 - Aug. '15</h4>
-                    </div>
-                    <div class="col-lg-12">
-                        <h4 class="resume_font">Certificate in Occupational Safety</h4>
-                    </div>
+                <div class="col-lg-12 text-left">
+                    <h1>Work History</h1>
                     <hr class="dark">
-                    <div class="col-lg-12 col-md-6 text-left cv-pad">
-                        <h3 class="resume_font"><b>Bachelor's in Homeland Security</b></h3>
-                    </div>
-                    <div class="col-lg-12 col-md-6 text-left cv-pad">
-                        <h4 class="resume_font">Jan. '08 - May. '12</h4>
-                    </div>
-                    <div class="col-lg-12">
-                        <h4 class="resume_font">Minor in Criminal Justice</h4>
-                    </div>
+                </div>
+            <!-- amazon -->
+                <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                    <h3 class="resume_font">amazon.com</h3>
+                </div>
+                <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                    <h3 class="resume_font">Sept. '15 - Present</h3>
+                </div>
+                <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                    <h3 class="resume_font">Hebron, KY</h3>
+                </div>
+                <div class="col-lg-12 col-sm-12 resume_info">
+                    <p><b>Occupaional Health and Safety Specialist</b></p>
+                    <ul>
+                        <li>Collaborate with area and operations management on night shift to continuously improve safety performance.</li>
+                        <li>Produce trend and data reports for FC senior leadership, as well as Regional and Corporate leadership.</li>
+                        <li>Re-launched the Associate Safety Committee for night shift that continues to drive departmental safety culture.</li>
+                        <li>Verified and developed critical safety programs to ensure policy compliance in advance of a peer audit.</li>
+                        <li>Traveled to other Amazon.com Fulfillment Centers s across the NAFC network in support of their safety teams.</li>
+                    </ul>
+                    <hr class="dark">
+                </div>
+            <!-- Barnes -->
+                <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                    <h3 class="resume_font">Marathon Petroleum</h3>
+                </div>
+                <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                    <h3 class="resume_font">Aug. '14 - Aug. '15</h3>
+                </div>
+                <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                    <h3 class="resume_font">Cincinnati, OH</h3>
+                </div>
+                <div class="col-lg-12 col-sm-12 resume_info">
+                    <p><b>Occupaional Health and Safety Specialist</b></p>
+                    <ul>
+                        <li>Authored emergency response plans and procedures, facilitated emergency management training, and coordinated with external emergency response agencies including the Cincinnati Fire and Police Departments.</li>
+                        <li>Collected sampling data and produced a comprehensive Noise Isopleth Map for the Marathon Detroit Refinery.</li>
+                        <li>Conducted contractor field safety audits and produced monthly trend reports for operations and contractor management.</li>
+                    </ul>
+                    <hr class="dark">
+                </div>
+            <!-- Marathon -->
+                <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                    <h3 class="resume_font">Barnes Aerospace</h3>
+                </div>
+                <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                    <h3 class="resume_font">Sept. '13 - May. '14</h3>
+                </div>
+                <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                    <h3 class="resume_font">West Chester, OH</h3>
+                </div>
+                <div class="col-lg-12 col-sm-12 resume_info">
+                    <p><b>Occupaional Health and Safety Specialist</b></p>
+                    <ul>
+                        <li>Conducted critical risk mitigation projects including: job safety analysis, safety procedure guides, risk assessment, and lock out/tag out procedures.</li>
+                        <li>Partnered with the Facilities Department to inspect and maintain the hazardous waste inventory.</li>
+                        <li>Ensured policy compliance with local, state, and federal regulations.</li>
+                    </ul>
+                    <hr class="dark">
+                </div>
+            <!-- KYANG -->
+                <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                    <h3 class="resume_font">Army National Guard</h3>
+                </div>
+                <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                    <h3 class="resume_font">Feb. '06 - Feb. '08</h3>
+                </div>
+                <div class="col-lg-4 col-sm-4 text-left cv-pad resume_info">
+                    <h3 class="resume_font">Louisville, KY</h3>
+                </div>
+                <div class="col-lg-12 col-sm-12 resume_info">
+                    <p><b>Occupaional Health and Safety Specialist</b></p>
+                    <ul>
+                        <li>Conducted intelligence support operations for the 20th Special Forces Group (Airborne).</li>
+                        <li>Assisted NCO and Senior NCO leadership in field support tasks during high-risk airborne operations.</li>
+                        <li>Enlisted into service at the accelerated rank of E-3 Private First Class.</li>
+                    </ul>
+                </div>
+            <!-- Education -->
+                <div class="col-lg-12 col-sm-12">
+                    <h1>Education</h1>
+                    <hr class="dark">
+                </div>
+                <div class="col-lg-12 text-left cv-pad">
+                    <h3 class="resume_font">Eastern Kentucky University</h3>
+                </div>
+                <div class="col-lg-12 text-left cv-pad">
+                    <h3 class="resume_font"><b>Master's in Safety, Security, Emergency Management</b></h3>
+                </div>
+                <div class="col-lg-12 text-left cv-pad">
+                    <h4 class="resume_font">May '13 - Aug. '15</h4>
+                </div>
+                <div class="col-lg-12 cv-pad">
+                    <h4 class="resume_font">Certificate in Occupational Safety</h4>
+                </div>
+                <div class="col-lg-12 cv-pad">
+                    <hr class="dark">
+                </div>
+                <div class="col-lg-12 text-left cv-pad">
+                    <h3 class="resume_font"><b>Bachelor's in Homeland Security</b></h3>
+                </div>
+                <div class="col-lg-12 text-left cv-pad">
+                    <h4 class="resume_font">Jan. '08 - May. '12</h4>
+                </div>
+                <div class="col-lg-12">
+                    <h4 class="resume_font">Minor in Criminal Justice</h4>
                 </div>
                 <br>
                 <div class="modal-footer">
-                    <div class="col-lg-6 text-left">
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-left">
                         <a href="docs/resume2017.pdf" target= "_blank" class="btn btn-modal">PDF</a>
                     </div>
-                    <div class="col-lg-6 text-right">
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-right">
                         <button type="button" class="btn btn-modal" data-dismiss="modal">Close</button>
                     </div>
                 </div>
