--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
+                    <div class="service-box skills-box">
                         <i class="fa fa-5x fa-tablet text-primary sr-icons"></i>
                         <h2>FRONT END</h2>
                         <ul class="text-muted text-a-font text-left about_me_23">
@@ -168,7 +168,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
+                    <div class="service-box skills-box">
                         <i class="fa fa-5x fa-server text-primary sr-icons"></i>
                         <h2>BACK END</h2>
                         <ul class="text-muted text-a-font text-left about_me_23">
@@ -179,7 +179,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
+                    <div class="service-box skills-box">
                         <i class="fa fa-5x fa-database text-primary sr-icons"></i>
                         <h2>DATABASE</h2>
                         <ul class="text-muted text-a-font text-left about_me_23">
@@ -189,7 +189,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
+                    <div class="service-box skills-box">
                         <i class="fa fa-5x fa-smile-o text-primary sr-icons"></i>
                         <h2>LIFE</h2>
                         <ul class="text-muted text-a-font text-left about_me_23">
@@ -322,16 +322,16 @@
                     <hr class="primary">
                     <p>Ready to start your next project with me? That's great! Contact me through your preferred method below and I will respond as soon as possible!</p>
                 </div>
-                <div class="col-md-2 col-lg-offset-2 text-center text-faded">
+                <div class="col-md-2 col-sm-2 col-xs-2 col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-xs-offset-2 text-center text-faded">
                     <a href="http://www.linkedin.com" target="_blank"><i class="fa fa-linkedin fa-3x sr-contact icons_color"></i></a>
                 </div>
-                <div class="col-md-2 text-center text-faded">
+                <div class="col-md-2 col-sm-2 col-xs-2 text-center text-faded">
                     <a href="construction.html" target="_blank"><i class="fa fa-envelope-o fa-3x sr-contact icons_color"></i></a>
                 </div>
-                <div class="col-md-2 text-center text-faded">
+                <div class="col-md-2 col-sm-2 col-xs-2 text-center text-faded">
                     <a href="http://www.twitter.com" target="_blank"><i class="fa fa-twitter fa-3x sr-contact icons_color"></i></a>
                 </div>
-                <div class="col-md-2 text-center text-faded">
+                <div class="col-md-2 col-sm-2 col-xs-2 text-center text-faded">
                     <a href="http://www.github.com" target="_blank"><i class="fa fa-github fa-3x sr-contact icons_color"></i></a>
                 </div>
             </div>
