fixed about me bottom padding

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </header>
 
 <!-- About Me Section -->
-    <section class="bg-primary" id="about">
+    <section class="bg-primary">
         <div class="container bg-fade">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
