--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <!-- About Me Section -->
     <section class="bg-primary">
-        <div class="container bg-fade">
+        <div class="container bg-fade" id="about">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h1 class="section-heading">Z:>_ About Me:</h1>
@@ -314,25 +314,29 @@
     </section>
 
 <!-- Contact Secion -->
-    <section class="bg-tertiary" id="contact">
-        <div class="container bg-fade">
+    <section class="bg-tertiary">
+        <div class="container" id="contact">
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center text-faded">
-                    <h2 class="section-heading">Z:>_ Contact</h2>
-                    <hr class="primary">
-                    <p>Ready to start your next project with me? That's great! Contact me through your preferred method below and I will respond as soon as possible!</p>
-                </div>
-                <div class="col-md-2 col-sm-2 col-xs-2 col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-xs-offset-2 text-center text-faded">
-                    <a href="http://www.linkedin.com" target="_blank"><i class="fa fa-linkedin fa-3x sr-contact icons_color"></i></a>
-                </div>
-                <div class="col-md-2 col-sm-2 col-xs-2 text-center text-faded">
-                    <a href="construction.html" target="_blank"><i class="fa fa-envelope-o fa-3x sr-contact icons_color"></i></a>
-                </div>
-                <div class="col-md-2 col-sm-2 col-xs-2 text-center text-faded">
-                    <a href="http://www.twitter.com" target="_blank"><i class="fa fa-twitter fa-3x sr-contact icons_color"></i></a>
-                </div>
-                <div class="col-md-2 col-sm-2 col-xs-2 text-center text-faded">
-                    <a href="http://www.github.com" target="_blank"><i class="fa fa-github fa-3x sr-contact icons_color"></i></a>
+                <div class="col-lg-8 col-md-10 col-sm-10 col-xs-12 bg-fade col-lg-offset-2 col-md-offset-1 col-sm-offset-1">
+                    <div class="col-lg-8 col-lg-offset-2 text-center text-faded">
+                        <h2 class="section-heading">Z:>_ Contact</h2>
+                        <hr class="primary">
+                        <p class="about_me_25">Ready to start your next project with me?</p>
+                        <p class="about_me_25">That's great!</p>
+                        <p class="about_me_25">Contact me through your preferred method below and I will respond as soon as possible!</p>
+                    </div>
+                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3 col-lg-offset-2 col-md-offset-2 col-sm-offset-2 icon-box text-center">
+                        <a href="http://www.linkedin.com" target="_blank"><i class="fa fa-linkedin fa-4x sr-contact icons_color"></i></a>
+                    </div>
+                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3 icon-box text-center">
+                        <a href="construction.html" target="_blank"><i class="fa fa-envelope-o fa-4x sr-contact icons_color"></i></a>
+                    </div>
+                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3 icon-box text-center">
+                        <a href="http://www.twitter.com" target="_blank"><i class="fa fa-twitter fa-4x sr-contact icons_color"></i></a>
+                    </div>
+                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-3 icon-box text-center">
+                        <a href="http://www.github.com" target="_blank"><i class="fa fa-github fa-4x sr-contact icons_color"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
