fixed job titles and footer button padding in resume modal

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                     <h3 class="resume_font">Cincinnati, OH</h3>
                 </div>
                 <div class="col-lg-12 col-sm-12 resume_info">
-                    <p><b>Occupaional Health and Safety Specialist</b></p>
+                    <p><b>Occupaional Health and Safety Co-Op</b></p>
                     <ul>
                         <li>Authored emergency response plans and procedures, facilitated emergency management training, and coordinated with external emergency response agencies including the Cincinnati Fire and Police Departments.</li>
                         <li>Collected sampling data and produced a comprehensive Noise Isopleth Map for the Marathon Detroit Refinery.</li>
@@ -421,7 +421,7 @@
                     <h3 class="resume_font">West Chester, OH</h3>
                 </div>
                 <div class="col-lg-12 col-sm-12 resume_info">
-                    <p><b>Occupaional Health and Safety Specialist</b></p>
+                    <p><b>Occupaional Health and Safety Co-Op</b></p>
                     <ul>
                         <li>Conducted critical risk mitigation projects including: job safety analysis, safety procedure guides, risk assessment, and lock out/tag out procedures.</li>
                         <li>Partnered with the Facilities Department to inspect and maintain the hazardous waste inventory.</li>
@@ -440,7 +440,7 @@
                     <h3 class="resume_font">Louisville, KY</h3>
                 </div>
                 <div class="col-lg-12 col-sm-12 resume_info">
-                    <p><b>Occupaional Health and Safety Specialist</b></p>
+                    <p><b>Signals Intelligence Analyst</b></p>
                     <ul>
                         <li>Conducted intelligence support operations for the 20th Special Forces Group (Airborne).</li>
                         <li>Assisted NCO and Senior NCO leadership in field support tasks during high-risk airborne operations.</li>
@@ -475,8 +475,8 @@
                 </div>
                 <div class="col-lg-12">
                     <h4 class="resume_font">Minor in Criminal Justice</h4>
+                    <br>
                 </div>
-                <br>
                 <div class="modal-footer">
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 text-left">
                         <a href="docs/resume2017.pdf" target= "_blank" class="btn btn-modal">PDF</a>
