fixed bootstrap container requirements

--- a/index.html
+++ b/index.html
@@ -121,19 +121,22 @@
                             </div>
                         </div>
                     </div>
-
-                    <div class="col-lg-8 col-lg-offset-2 text-center">
-                        <br>
-                        <h1 class="text-faded">More Information:</h1>
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2 text-center">
+                            <br>
+                            <h1 class="text-faded">More Information:</h1>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class = "col-lg-12 text-center px20-padding">
-                <div class="px20-padding col-md-6 text-center">
-                    <a href="construction.html" class="page-scroll btn btn-default btn-xl sr-button" target="_blank">Z:>_ BLOG</a>
-                </div>
-                <div class = "px20-padding col-md-6 text-center">
-                    <button class="page-scroll btn btn-default btn-xl sr-button" data-toggle="modal" data-target="#resume">Z:>_ RESUME</button>
+            <div class="row">
+                <div class = "col-lg-12 text-center px20-padding">
+                    <div class="px20-padding col-md-6 text-center">
+                        <a href="construction.html" class="page-scroll btn btn-default btn-xl sr-button" target="_blank">Z:>_ BLOG</a>
+                    </div>
+                    <div class = "px20-padding col-md-6 text-center">
+                        <button class="page-scroll btn btn-default btn-xl sr-button" data-toggle="modal" data-target="#resume">Z:>_ RESUME</button>
+                    </div>
                 </div>
             </div>
         </div>
