--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Personal Portfolio Website">
+    <meta name="author" content="Jonathan Prell">
 
     <title>Jon Prell Web Dev</title>
 
@@ -90,45 +90,47 @@
                     <img src="img/blog/archer.jpg" class="img-responsive" id="portrait_img" alt="Self Portrait">
                     <hr class="primary">
                     <p class="text-faded text-left about_me_25">My name is <b>Jon Prell</b> and I am a full-stack web developer. From Concept to Deployment, I have all of the skills needed to bring your project to life.</p>
+                </div>
+            </div>
 
-                    <div class="row">
-                        <div class="col-lg-3 col-md-6 text-center">
-                            <div class="service-box">
-                                <i class="fa fa-4x fa-tablet text-primary sr-icons"></i>
-                                <h3>FRONT END APPLICITY</h3>
-                                <p class="text-a-font text-left">You're probably thinking "This guy doesn't know how to spell!" or "Is 'Applicity' really a word?" No need to reach for your dictionary, it isn't a real word. It's simply my approach to front-end design. I believe that applicable simplicity should drive design. End-users don't want to spend time trying to figure out how to use an application when they need to be putting that app to use!</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 text-center">
-                            <div class="service-box">
-                                <i class="fa fa-4x fa-server text-primary sr-icons"></i>
-                                <h3>BACK END EFFECIENCY</h3>
-                                <p class="text-left text-a-font">A lot goes on behind the scenes to keep your app moving. Anyting that takes longer than 3 seconds to load is unacceptable. I implement the latest programming paradigms to grease the gears ensure your server is high speed, low drag.</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 text-center">
-                            <div class="service-box">
-                                <i class="fa fa-4x fa-paint-brush text-primary sr-icons"></i>
-                                <h3>IMAGINATION TO CREATE</h3>
-                                <p class="text-a-font text-left">My work is where the right brain and left brain come together. Understanding the logic behind the science of our world allows me to explore the limits of human creativity.</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 text-center">
-                            <div class="service-box">
-                                <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                                <h3>ENGINEERED WITH LOVE</h3>
-                                <p class="text-a-font text-left">Isn't it love that makes you - er, i mean us - human?</p>
-                            </div>
-                        </div>
+            <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-tablet text-primary sr-icons"></i>
+                        <h3>FRONT END APPLICITY</h3>
+                        <p class="text-a-font text-left">You're probably thinking "This guy doesn't know how to spell!" or "Is 'Applicity' really a word?" No need to reach for your dictionary, it isn't a real word. It's simply my approach to front-end design. I believe that applicable simplicity should drive design. End-users don't want to spend time trying to figure out how to use an application when they need to be putting that app to use!</p>
                     </div>
-                    <div class="row">
-                        <div class="col-lg-8 col-lg-offset-2 text-center">
-                            <br>
-                            <h1 class="text-faded">More Information:</h1>
-                        </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-server text-primary sr-icons"></i>
+                        <h3>BACK END EFFECIENCY</h3>
+                        <p class="text-left text-a-font">A lot goes on behind the scenes to keep your app moving. Anyting that takes longer than 3 seconds to load is unacceptable. I implement the latest programming paradigms to grease the gears ensure your server is high speed, low drag.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-paint-brush text-primary sr-icons"></i>
+                        <h3>IMAGINATION TO CREATE</h3>
+                        <p class="text-a-font text-left">My work is where the right brain and left brain come together. Understanding the logic behind the science of our world allows me to explore the limits of human creativity.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
+                        <h3>ENGINEERED WITH LOVE</h3>
+                        <p class="text-a-font text-left">Isn't it love that makes you - er, i mean us - human?</p>
                     </div>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <br>
+                    <h1 class="text-faded">More Information:</h1>
+                </div>
+            </div>
+
             <div class="row">
                 <div class = "col-lg-12 text-center px20-padding">
                     <div class="px20-padding col-md-6 text-center">
@@ -151,9 +153,6 @@
             		<hr class="primary">
             	</div>
             </div>
-        </div>
-        <div class="container">
-
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box skills-box">
@@ -209,7 +208,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading ">Z:>_ Portfolio</h2>
+                    <h2 class="section-heading">Z:>_ Portfolio</h2>
                     <hr class="primary">
                 </div>
             </div>
