--- a/index.html
+++ b/index.html
@@ -454,28 +454,28 @@
                     <h1>Education</h1>
                     <hr class="dark">
                 </div>
-                <div class="col-lg-12 text-left cv-pad">
+                <div class="col-lg-12 col-sm-12 text-left cv-pad">
                     <h3 class="resume_font">Eastern Kentucky University</h3>
                 </div>
-                <div class="col-lg-12 text-left cv-pad">
+                <div class="col-lg-12 col-sm-12 text-left cv-pad">
                     <h3 class="resume_font"><b>Master's in Safety, Security, Emergency Management</b></h3>
                 </div>
-                <div class="col-lg-12 text-left cv-pad">
+                <div class="col-lg-12 col-sm-12 text-left cv-pad">
                     <h4 class="resume_font">May '13 - Aug. '15</h4>
                 </div>
-                <div class="col-lg-12 cv-pad">
+                <div class="col-lg-12 col-sm-12 cv-pad">
                     <h4 class="resume_font">Certificate in Occupational Safety</h4>
                 </div>
                 <div class="col-lg-12 cv-pad">
                     <hr class="dark">
                 </div>
-                <div class="col-lg-12 text-left cv-pad">
+                <div class="col-lg-12 col-sm-12 text-left cv-pad">
                     <h3 class="resume_font"><b>Bachelor's in Homeland Security</b></h3>
                 </div>
-                <div class="col-lg-12 text-left cv-pad">
+                <div class="col-lg-12 col-sm-12 text-left cv-pad">
                     <h4 class="resume_font">Jan. '08 - May. '12</h4>
                 </div>
-                <div class="col-lg-12">
+                <div class="col-lg-12 col-sm-12 text-left cv-pad">
                     <h4 class="resume_font">Minor in Criminal Justice</h4>
                     <br>
                 </div>
