updated about me section

--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-tablet text-primary sr-icons"></i>
                         <h3>FRONT END APPLICITY</h3>
-                        <p class="text-a-font text-left">You're probably thinking "This guy doesn't know how to spell!" or "Is 'Applicity' really a word?" No need to reach for your dictionary, it isn't a real word. It's simply my approach to front-end design. I believe that applicable simplicity should drive design. End-users don't want to spend time trying to figure out how to use an application when they need to be putting that app to use!</p>
+                        <p class="text-a-font text-left">I believe that applicable simplicity should drive design. End-users don't want to spend time trying to figure out how to use an application when they need to be putting that app to use!</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-server text-primary sr-icons"></i>
                         <h3>BACK END EFFECIENCY</h3>
-                        <p class="text-left text-a-font">A lot goes on behind the scenes to keep your app moving. Anyting that takes longer than 3 seconds to load is unacceptable. I implement the latest programming paradigms to grease the gears ensure your server is high speed, low drag.</p>
+                        <p class="text-left text-a-font">Any page that takes longer than 3 seconds to load is unacceptable. I implement the latest programming paradigms to grease the gears ensuring your server is high speed, low drag.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
