updated about me font sizes to be more uniform

--- a/index.html
+++ b/index.html
@@ -93,33 +93,33 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row about_me_row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-tablet text-primary sr-icons"></i>
                         <h3>FRONT END APPLICITY</h3>
-                        <p class="text-a-font text-left">I believe that applicable simplicity should drive design. End-users don't want to spend time trying to figure out how to use an application when they need to be putting that app to use!</p>
+                        <p class="text-a-font text-left about_me_20">I believe that applicable simplicity should drive design. End-users don't want to spend time trying to figure out how to use an application when they need to be putting that app to use!</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-server text-primary sr-icons"></i>
                         <h3>BACK END EFFECIENCY</h3>
-                        <p class="text-left text-a-font">Any page that takes longer than 3 seconds to load is unacceptable. I implement the latest programming paradigms to grease the gears ensuring your server is high speed, low drag.</p>
+                        <p class="text-left text-a-font about_me_20">Any page that takes longer than 3 seconds to load is unacceptable. I implement the latest programming paradigms to grease the gears ensuring your server is high speed, low drag.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-paint-brush text-primary sr-icons"></i>
                         <h3>IMAGINATION TO CREATE</h3>
-                        <p class="text-a-font text-left">My work is where the right brain and left brain come together. Understanding the logic behind the science of our world allows me to explore the limits of human creativity.</p>
+                        <p class="text-a-font text-left about_me_20">My work is where the right brain and left brain come together. Understanding the logic behind the science of our world allows me to explore the limits of human creativity.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
                         <h3>ENGINEERED WITH LOVE</h3>
-                        <p class="text-a-font text-left">Isn't it love that makes you - er, i mean us - human?</p>
+                        <p class="text-a-font text-left about_me_20">Isn't it love that makes you - er, i mean us - human?</p>
                     </div>
                 </div>
             </div>
@@ -127,7 +127,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <br>
-                    <h1 class="text-faded">More Information:</h1>
+                    <h2 class="text-faded">More Information:</h2>
                 </div>
             </div>
 
